--- a/code/testbed.ipynb
+++ b/code/testbed.ipynb
@@ -1,114 +1,75 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Training Dialogue Encoder"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Validation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## MultiWOZ Service Classification"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '2'"
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alekseev_ilya/dialogue-augmentation/VENV/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
-    "hidden_size = 768\n",
-    "n_classes = 7\n",
+    "from datasets import load_dataset\n",
     "\n",
-    "train_size = 8000\n",
-    "val_size = 1000"
+    "dataset = load_dataset('Salesforce/dialogstudio', 'FRAMES')['train']['log']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "from torch import nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
-    "\n",
-    "@torch.no_grad()\n",
-    "def generate_dataset(train_size, val_size, hidden_size, n_classes):\n",
-    "    embeddings = torch.empty(train_size+val_size, hidden_size)\n",
-    "    embeddings.normal_()\n",
-    "\n",
-    "    linear_mapper = nn.Linear(hidden_size, n_classes)\n",
-    "    logits = linear_mapper(embeddings)\n",
-    "    targets = logits.ge(0).to(torch.float)\n",
-    "\n",
-    "    train_dataset = list(zip(embeddings[:train_size], targets[:train_size]))\n",
-    "    val_dataset = list(zip(embeddings[train_size:], targets[train_size:]))\n",
-    "\n",
-    "    return train_dataset, val_dataset\n",
-    "\n",
-    "train_dataset, val_dataset = generate_dataset(train_size, val_size, hidden_size, n_classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from train_utils import get_multiwoz_service_clf_score\n",
-    "\n",
-    "score = get_multiwoz_service_clf_score(train_dataset, val_dataset, 'cuda')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(0.8684, device='cuda:0')"
+       "([\"I'd like to book a trip to Atlantis from Caprica on Saturday, August 13, 2016 for 8 adults. I have a tight budget of 1700.\",\n",
+       "  'Hi...I checked a few options for you, and unfortunately, we do not currently have any trips that meet this criteria.  Would you like to book an alternate travel option?',\n",
+       "  'Yes, how about going to Neverland from Caprica on August 13, 2016 for 5 adults. For this trip, my budget would be 1900.',\n",
+       "  'I checked the availability for this date and there were no trips available.  Would you like to select some alternate dates?',\n",
+       "  'I have no flexibility for dates... but I can leave from Atlantis rather than Caprica. How about that?',\n",
+       "  'I checked the availability for that date and there were no trips available.  Would you like to select some alternate dates?',\n",
+       "  \"I suppose I'll speak with my husband to see if we can choose other dates, and then I'll come back to you. Thanks for your help\"],\n",
+       " [0, 1, 0, 1, 0, 1, 0])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "score"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### MLPClassifier"
+    "def parse_dialog_studio_sample(raw_sample):\n",
+    "    utterances = []\n",
+    "    speakers = []\n",
+    "    for turn in raw_sample:\n",
+    "        ut = turn['user utterance']\n",
+    "        if ut != '':\n",
+    "            utterances.append(ut)\n",
+    "            speakers.append(0)\n",
+    "        ut = turn['system response']\n",
+    "        if ut != '':\n",
+    "            utterances.append(ut)\n",
+    "            speakers.append(1)\n",
+    "    return utterances, speakers\n",
+    "\n",
+    "utterances, speakers = parse_dialog_studio_sample(dataset[0])\n",
+    "utterances, speakers"
    ]
   },
   {
@@ -117,20 +78,136 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset, val_dataset = generate_dataset(train_size, val_size, hidden_size, n_classes)"
+    "path_to_root = '/home/alekseev_ilya/dialogue-augmentation'\n",
+    "\n",
+    "import sys\n",
+    "sys.path.insert(1, path_to_root)\n",
+    "\n",
+    "from mylib.utils.data.dialogue_data_type import Dialogue\n",
+    "\n",
+    "dia = Dialogue(\n",
+    "    idx=7,\n",
+    "    utterances=utterances,\n",
+    "    speakers=speakers,\n",
+    "    source_dataset_name='FRAMES',\n",
+    "    idx_within_source=0\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{ 'content': [ { 'speaker': 0,\n",
+       "                 'utterance': \"I'd like to book a trip to Atlantis from \"\n",
+       "                              'Caprica on Saturday, August 13, 2016 for 8 '\n",
+       "                              'adults. I have a tight budget of 1700.'},\n",
+       "               { 'speaker': 1,\n",
+       "                 'utterance': 'Hi...I checked a few options for you, and '\n",
+       "                              'unfortunately, we do not currently have any '\n",
+       "                              'trips that meet this criteria.  Would you like '\n",
+       "                              'to book an alternate travel option?'},\n",
+       "               { 'speaker': 0,\n",
+       "                 'utterance': 'Yes, how about going to Neverland from Caprica '\n",
+       "                              'on August 13, 2016 for 5 adults. For this trip, '\n",
+       "                              'my budget would be 1900.'},\n",
+       "               { 'speaker': 1,\n",
+       "                 'utterance': 'I checked the availability for this date and '\n",
+       "                              'there were no trips available.  Would you like '\n",
+       "                              'to select some alternate dates?'},\n",
+       "               { 'speaker': 0,\n",
+       "                 'utterance': 'I have no flexibility for dates... but I can '\n",
+       "                              'leave from Atlantis rather than Caprica. How '\n",
+       "                              'about that?'},\n",
+       "               { 'speaker': 1,\n",
+       "                 'utterance': 'I checked the availability for that date and '\n",
+       "                              'there were no trips available.  Would you like '\n",
+       "                              'to select some alternate dates?'},\n",
+       "               { 'speaker': 0,\n",
+       "                 'utterance': \"I suppose I'll speak with my husband to see if \"\n",
+       "                              \"we can choose other dates, and then I'll come \"\n",
+       "                              'back to you. Thanks for your help'}],\n",
+       "  'idx': 7,\n",
+       "  'idx_within_source': 0,\n",
+       "  'source_dataset_name': 'FRAMES'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "X_train = np.stack([emb for emb, _ in train_dataset], axis=0)\n",
-    "y_train = np.stack([tar for _, tar in train_dataset], axis=0)\n",
-    "X_val = np.stack([emb for emb, _ in val_dataset], axis=0)\n",
-    "y_val = np.stack([tar for _, tar in val_dataset], axis=0)"
+    "dia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['<s>', '</s>', '<unk>', '<pad>', '<mask>']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained('roberta-base')\n",
+    "tokenizer.all_special_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['<s>', '</s>', '[UNK]', '<pad>', '<mask>']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer2 = AutoTokenizer.from_pretrained('microsoft/mpnet-base')\n",
+    "tokenizer2.all_special_tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': [0, 20030, 642, 232, 939, 40, 989, 6000, 8, 1597, 11, 110, 1144, 600, 2], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer('hellp world i will leave forever and die in your heart though')"
    ]
   },
   {
@@ -139,20 +216,9 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/alekseev_ilya/dialogue-augmentation/VENV/lib/python3.8/site-packages/sklearn/neural_network/_multilayer_perceptron.py:691: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (5) reached and the optimization hasn't converged yet.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>MLPClassifier(batch_size=32, learning_rate_init=0.0005, max_iter=5)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">MLPClassifier</label><div class=\"sk-toggleable__content\"><pre>MLPClassifier(batch_size=32, learning_rate_init=0.0005, max_iter=5)</pre></div></div></div></div></div>"
-      ],
       "text/plain": [
-       "MLPClassifier(batch_size=32, learning_rate_init=0.0005, max_iter=5)"
+       "{'input_ids': [0, 3113, 2365, 2092, 1049, 2101, 2685, 5095, 2002, 3284, 2003, 2119, 2544, 2299, 2], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
       ]
      },
      "execution_count": 10,
@@ -161,59 +227,7 @@
     }
    ],
    "source": [
-    "from sklearn.neural_network import MLPClassifier\n",
-    "\n",
-    "clf = MLPClassifier(\n",
-    "    batch_size=32,\n",
-    "    learning_rate_init=5e-4,\n",
-    "    max_iter=5\n",
-    ")\n",
-    "\n",
-    "clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 7)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred = clf.predict(X_val)\n",
-    "y_pred.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8910066481802212"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import f1_score\n",
-    "\n",
-    "\n",
-    "f1_score(y_val, y_pred, average='macro')"
+    "tokenizer2('hellp world i will leave forever and die in your heart though')"
    ]
   }
  ],
